background fixed in place and covers whole screen

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,5 +2,9 @@
 
   text-align: center;
   margin: 0;
-  padding: 0
+  padding: 0;
+  background: url(./images/CL.jpg) no-repeat center center fixed; 
+  background-size: cover;
+
 }
+
